cleanup / add validation

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,6 @@
 # SMTP_PORT=
 # SMTP_USER=
 # SMTP_PASSWORD=
-EMAIL=
-PASS=
+EMAIL=your@email.com
+PASS=password123
 ALLOWED_ORIGINS=http://localhost:4321,http://www.example.com
